logs/neuroinfo-toolkit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/httplib2'...
Listing './lib/python3.5/site-packages/httplib2-0.10.3.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/neuro'...
Compiling './lib/python3.5/site-packages/neuro/__init__.py'...
***   File "./lib/python3.5/site-packages/neuro/__init__.py", line 35
    except IOError, ioe:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/neuro/algorithms'...
Listing './lib/python3.5/site-packages/neuro/algorithms/cpu'...
Listing './lib/python3.5/site-packages/neuro/algorithms/gpu'...
Listing './lib/python3.5/site-packages/neuro/apps'...
Compiling './lib/python3.5/site-packages/neuro/apps/xnat.py'...
***   File "./lib/python3.5/site-packages/neuro/apps/xnat.py", line 552
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/neuro/classifiers'...
Compiling './lib/python3.5/site-packages/neuro/command.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (command.py, line 125)
Compiling './lib/python3.5/site-packages/neuro/common.py'...
***   File "./lib/python3.5/site-packages/neuro/common.py", line 50
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/neuro/contrib'...
Compiling './lib/python3.5/site-packages/neuro/contrib/icog.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (icog.py, line 47)
Compiling './lib/python3.5/site-packages/neuro/diff.py'...
***   File "./lib/python3.5/site-packages/neuro/diff.py", line 129
    print "[WARN]: Using default function for type '" + str(type) + "'"
                                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/neuro/filesystem.py'...
***   File "./lib/python3.5/site-packages/neuro/filesystem.py", line 274
    def mkdir(dir, perms=0700):
                            ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/neuro/models'...
Compiling './lib/python3.5/site-packages/neuro/models/nifti.py'...
***   File "./lib/python3.5/site-packages/neuro/models/nifti.py", line 118
    except FileFormatException, ffe:
                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/neuro/models/xml.py'...
***   File "./lib/python3.5/site-packages/neuro/models/xml.py", line 73
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/neuro/net'...
Compiling './lib/python3.5/site-packages/neuro/net/http.py'...
***   File "./lib/python3.5/site-packages/neuro/net/http.py", line 409
    except httplib2.ServerNotFoundError, e:
                                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/neuro/psych'...
Compiling './lib/python3.5/site-packages/neuro/psych/formulas.py'...
***   File "./lib/python3.5/site-packages/neuro/psych/formulas.py", line 134
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/neuro/strings.py'...
***   File "./lib/python3.5/site-packages/neuro/strings.py", line 231
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/neuro/system.py'...
***   File "./lib/python3.5/site-packages/neuro/system.py", line 122
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/neuroinfo_toolkit-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
